ldap/phpldapadmin/phpldapadmin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phpldapadmin
  name: phpldapadmin
  namespace: kube-system
spec:
  ports:
    - port: 443
  selector:
    app: phpldapadmin
